Added comments in master and reformatted some methods

--- a/bewerbungverwaltung-cloud-web/src/main/webapp/index.html
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="UTF-8">
-	<title>Bewerbungverwaltung</title>
+	<head>
+		<meta charset="UTF-8">
+		<title>Bewerbungverwaltung</title>
+		
+		<script id="sap-ui-bootstrap"
+			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+			data-sap-ui-libs="sap.m" 
+			data-sap-ui-theme="sap_belize"
+			data-sap-ui-compatVersion="edge"
+			data-sap-ui-resourceroots='{"de.fis.bewerbungverwaltung": "./"}'>
+		</script>
 	
-	<script id="sap-ui-bootstrap"
-		src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
-		data-sap-ui-libs="sap.m" data-sap-ui-theme="sap_belize"
-		data-sap-ui-compatVersion="edge"
-		data-sap-ui-resourceroots='{"de.fis.bewerbungverwaltung": "./"}'>
-	</script>
-
-	<script>
-		sap.ui.getCore().attachInit(function() {
-			new sap.m.Shell({
-				app : new sap.ui.core.ComponentContainer({
-					height : "100%",
-					name : "de.fis.bewerbungverwaltung"
-				})
-			}).placeAt("content");
-		});
-	</script>
-</head>
+		<script>
+			sap.ui.getCore().attachInit(function() {
+				new sap.m.Shell({
+					app : new sap.ui.core.ComponentContainer({
+						height : "100%",
+						name : "de.fis.bewerbungverwaltung"
+					})
+				}).placeAt("content");
+			});
+		</script>
+	</head>
 
 <body class="sapUiBody" id="content">
 </body>
